--- a/analyze_datasets.ipynb
+++ b/analyze_datasets.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyze reference datasets and prepare them for training"
+    "# Analyze some reference datasets and prepare them for training\n",
+    "By Wisdom d'Almeida"
    ]
   },
   {
